--- a/.classpath
+++ b/.classpath
@@ -45,5 +45,6 @@
 	<classpathentry kind="lib" path="C:/Users/Asael Calizaya/workspace/jagdPanther/src/lib/selenium-2.44.0/libs/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Asael Calizaya/workspace/jagdPanther/src/lib/itext-2.1.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Asael Calizaya/workspace/jagdPanther/src/lib/mysql-connector-java-3.1.13-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Asael Calizaya/workspace/jagdPanther/src/lib/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
